plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.4'
	id 'io.spring.dependency-management' version '1.1.0'
  	id "io.freefair.lombok" version "6.6.3"
}

group = 'scalefocus.blogapp'
version = '0.2.0'
sourceCompatibility = '19'
targetCompatibility = '19'

repositories {
	mavenCentral()
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springdoc:springdoc-openapi-starter-common:2.0.2'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
	runtimeOnly    'com.h2database:h2'
	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.assertj:assertj-core:3.24.2'
	testImplementation 'org.jmockit:jmockit:1.49'
	testImplementation "org.testcontainers:mysql:1.17.6"
	testImplementation 'org.testcontainers:testcontainers:1.17.6'
	testImplementation "org.testcontainers:junit-jupiter:1.17.6"	
}
test {
    jvmArgs "-javaagent:${classpath.find { it.name.contains("jmockit") }.absolutePath}"
   // testLogging.showExceptions = true
   // testLogging.showStandardStreams = true
}

tasks.named('test') {
	useJUnitPlatform()
}
